# rustc-bug-nightly-0824

./: Cargo.toml
.github/workflows/: main.yml
src/: lib.rs
