[package]
name = "rustc-bug-nightly-0824"
version = "0.1.0"
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitmask]
default-features = false
version = "0.5.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '=1.3.1'

[features]
default = ['std']
std = [
    'codec/std'
]
